Configured gh oauth endpoint for log in through next.js
